#903460 by Jeff Burnz, munzirtaha: Fixed Bartik tabs broken in IE6, 7 and RTL.

--- a/themes/bartik/css/ie-rtl.css
+++ b/themes/bartik/css/ie-rtl.css
@@ -1,4 +1,4 @@
-/* $Id: ie-rtl.css,v 1.3 2010/10/05 01:48:11 dries Exp $ */
+/* $Id: ie-rtl.css,v 1.4 2010/10/07 17:59:01 webchick Exp $ */
 
 fieldset legend {
   left: 6px;
@@ -24,5 +24,15 @@ ul.action-links li a,
 #user-login li.openid-link a {
   background-position: right -3px;
   padding-right: 20px;
+  zoom: 1;
+}
+#main-menu ul.links li {
+  margin: 0;
+}
+#main-menu ul.links li,
+#main-menu ul.links li a {
+  display: inline;
+  float: none;
+  margin: 0;
   zoom: 1;
 }
