--- a/themes/bartik/css/style-rtl.css
+++ b/themes/bartik/css/style-rtl.css
@@ -1,4 +1,4 @@
-/* $Id: style-rtl.css,v 1.11 2010/10/05 01:48:11 dries Exp $ */
+/* $Id: style-rtl.css,v 1.12 2010/10/07 17:59:01 webchick Exp $ */
 
 /* ------------------ Reset Styles ------------------ */
 
@@ -62,6 +62,13 @@ ul.tips {
   background-position: right -3px;
   padding-left: 0;
   padding-right: 20px;
+}
+
+/* --------------- Main Menu ------------ */
+
+#main-menu ul.links li,
+#main-menu ul.links li a {
+  float: right;
 }
 
 /* --------------- Secondary Menu ------------ */
